[project]
name = "kool"
version = "0.1.0"
description = "Your friendly neighborhood Kafka tool!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.12.0",
    "matplotlib>=3.10.3",
    "more-itertools>=10.7.0",
    "pandas>=2.3.0",
    "tabulate>=0.9.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[project.scripts]
kool = "kool.cli:app"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
